force-app/main/default/objects/Test_Case__c/Test_Case__c.object-meta.xml
<CustomObject>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{0000000}</displayFormat>
        <label>Test Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>