force-app/main/default/objects/Test_Case__c/fields/Approval_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reasons__c</fullName>
    <label>Approval Reason</label>
    <type>TextArea</type>
</CustomField>