force-app/main/default/objects/Test_Case__c/fields/Approval_status__c.field-meta.xml
<CustomField>
    <fullName>Approval_status__c</fullName>
    <label>Approval Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>