force-app/main/default/objects/Test_Case__c/fields/Approval_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Date__c</fullName>
    <description>Last modified date for Approval Status</description>
    <label>Approval Status Date</label>
    <type>DateTime</type>
</CustomField>