force-app/main/default/objects/Test_Case__c/fields/Automated_Test_Function__c.field-meta.xml
<CustomField>
    <fullName>Automated_Test_Function__c</fullName>
    <label>Automated Test Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3.X</fullName>
            </value>
            <value>
                <fullName>Active Alert</fullName>
            </value>
            <value>
                <fullName>Adjust Route Times</fullName>
            </value>
            <value>
                <fullName>Auto Arrive/Depart</fullName>
            </value>
            <value>
                <fullName>Cease Dispatch</fullName>
            </value>
            <value>
                <fullName>Create Routes</fullName>
            </value>
            <value>
                <fullName>Day in the Life</fullName>
            </value>
            <value>
                <fullName>Distance by Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Dual Device</fullName>
            </value>
            <value>
                <fullName>Geocoding</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Maintenance Entity</fullName>
            </value>
            <value>
                <fullName>Mobile Route</fullName>
            </value>
            <value>
                <fullName>Plot Routes</fullName>
            </value>
            <value>
                <fullName>Remove Stop</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Reset Route</fullName>
            </value>
            <value>
                <fullName>Resource Assignment</fullName>
            </value>
            <value>
                <fullName>Road Restrictions</fullName>
            </value>
            <value>
                <fullName>Route Delays</fullName>
            </value>
            <value>
                <fullName>Route Exceptions</fullName>
            </value>
            <value>
                <fullName>Route Manipulation</fullName>
            </value>
            <value>
                <fullName>Route Property Tester</fullName>
            </value>
            <value>
                <fullName>RTS Bridges</fullName>
            </value>
            <value>
                <fullName>Send Orders</fullName>
            </value>
            <value>
                <fullName>Service Time Updater</fullName>
            </value>
            <value>
                <fullName>Session Handling</fullName>
            </value>
            <value>
                <fullName>Stationary Events</fullName>
            </value>
            <value>
                <fullName>Suggest Route</fullName>
            </value>
            <value>
                <fullName>Telematics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>