force-app/main/default/objects/Test_Case__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <label>Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>