force-app/main/default/objects/Test_Case__c/fields/Function_PL__c.field-meta.xml
<CustomField>
    <fullName>Function_PL__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Calculations</fullName>
            </value>
            <value>
                <fullName>Data Transfer</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Dispatching</fullName>
            </value>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>Geocoder</fullName>
            </value>
            <value>
                <fullName>Latitude</fullName>
            </value>
            <value>
                <fullName>Loading</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Maps</fullName>
            </value>
            <value>
                <fullName>Perspective</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>RIC</fullName>
            </value>
            <value>
                <fullName>Routing</fullName>
            </value>
            <value>
                <fullName>RPD</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>