force-app/main/default/objects/Test_Case__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>