force-app/main/default/objects/Test_Case__c/fields/Need_Rework_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_Rework_Date__c</fullName>
    <description>Date that the test case was put into Needs Rework.  Used for tester home scorecard.</description>
    <label>Need Rework Date</label>
    <type>DateTime</type>
</CustomField>