force-app/main/default/objects/Test_Case__c/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <label>Prerequisites</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>