force-app/main/default/objects/Test_Case__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Run Once</fullName>
            </value>
            <value>
                <fullName>2 - Full Regression Test</fullName>
            </value>
            <value>
                <fullName>3 - Certification Test</fullName>
            </value>
            <value>
                <fullName>4 - Smoke Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>