force-app/main/default/objects/Test_Case__c/fields/Product_Area_PL__c.field-meta.xml
<CustomField>
    <fullName>Product_Area_PL__c</fullName>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Alert</fullName>
            </value>
            <value>
                <fullName>Admin Module</fullName>
            </value>
            <value>
                <fullName>Algorithms</fullName>
            </value>
            <value>
                <fullName>CAIR Biztalk</fullName>
            </value>
            <value>
                <fullName>CAIR Database</fullName>
            </value>
            <value>
                <fullName>CAIR Mobile</fullName>
            </value>
            <value>
                <fullName>CAIR Web Application</fullName>
            </value>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>FleetLoader</fullName>
            </value>
            <value>
                <fullName>Geocoder</fullName>
            </value>
            <value>
                <fullName>GIS</fullName>
            </value>
            <value>
                <fullName>Help and Documentation</fullName>
            </value>
            <value>
                <fullName>Importer</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Marketing Center</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>MobileCast Management Center</fullName>
            </value>
            <value>
                <fullName>MobileCast Mobile</fullName>
            </value>
            <value>
                <fullName>MobileCast Server</fullName>
            </value>
            <value>
                <fullName>NetScheduler</fullName>
            </value>
            <value>
                <fullName>RA Dispatch</fullName>
            </value>
            <value>
                <fullName>RA History</fullName>
            </value>
            <value>
                <fullName>RA Mobile</fullName>
            </value>
            <value>
                <fullName>RA Planning</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>Roadnet Info Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>