force-app/main/default/objects/Test_Case__c/fields/Product_Family_PL__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_PL__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roadnet Apex</fullName>
            </value>
            <value>
                <fullName>Roadnet Transportation Suite</fullName>
            </value>
            <value>
                <fullName>Roadnet Anywhere</fullName>
            </value>
            <value>
                <fullName>RTS Management Center</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>CAIR</fullName>
            </value>
            <value>
                <fullName>RN Telematics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>