force-app/main/default/objects/Test_Case__c/fields/Related_File_Location__c.field-meta.xml
<CustomField>
    <fullName>Related_File_Location__c</fullName>
    <formula>HYPERLINK(&quot;\\\\rn-cr-filestor\\TE Case Attachments\\&quot; &amp; Name, &quot;\\\\rn-cr-filestor\\TE Case Attachments\\&quot; &amp; Name, &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related File Location</label>
    <type>Text</type>
</CustomField>