force-app/main/default/objects/Test_Case__c/fields/Related_Files_Exist__c.field-meta.xml
<CustomField>
    <fullName>Related_Files_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related Files Exist</label>
    <type>Checkbox</type>
</CustomField>