force-app/main/default/objects/Test_Case__c/fields/Reviewer_Id__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Cases_Reviewed</relationshipName>
    <type>Lookup</type>
</CustomField>