force-app/main/default/objects/Test_Case__c/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <label>Steps</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>