force-app/main/default/objects/Test_Case__c/fields/Subfunction_PL__c.field-meta.xml
<CustomField>
    <fullName>Subfunction_PL__c</fullName>
    <label>Subfunction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Active Alert</fullName>
            </value>
            <value>
                <fullName>Adjust Service Time</fullName>
            </value>
            <value>
                <fullName>Admin Website</fullName>
            </value>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>Algo</fullName>
            </value>
            <value>
                <fullName>Application Perspective</fullName>
            </value>
            <value>
                <fullName>Auto Arrive/Depart</fullName>
            </value>
            <value>
                <fullName>Average Cost</fullName>
            </value>
            <value>
                <fullName>Breaks</fullName>
            </value>
            <value>
                <fullName>Bridges</fullName>
            </value>
            <value>
                <fullName>Building Delivery Sequence</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Cancel Stops</fullName>
            </value>
            <value>
                <fullName>Canned Text Messages</fullName>
            </value>
            <value>
                <fullName>Cease Dispatch</fullName>
            </value>
            <value>
                <fullName>Cells</fullName>
            </value>
            <value>
                <fullName>Cell Sets</fullName>
            </value>
            <value>
                <fullName>Change Phase</fullName>
            </value>
            <value>
                <fullName>Color Picker</fullName>
            </value>
            <value>
                <fullName>Column Management</fullName>
            </value>
            <value>
                <fullName>Compute Pallet</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Consignees</fullName>
            </value>
            <value>
                <fullName>Context</fullName>
            </value>
            <value>
                <fullName>Continuous Optimization</fullName>
            </value>
            <value>
                <fullName>Controls - Misc</fullName>
            </value>
            <value>
                <fullName>Create Routes</fullName>
            </value>
            <value>
                <fullName>Custom Objects (FUDS)</fullName>
            </value>
            <value>
                <fullName>Custom Properties (FUDS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>