force-app/main/default/objects/Test_Case__c/fields/Test_Objective__c.field-meta.xml
<CustomField>
    <fullName>Test_Objective__c</fullName>
    <label>Test Objective</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>