force-app/main/default/objects/Test_Case__c/recordTypes/Automated_Functional.recordType-meta.xml
<RecordType>
    <fullName>Automated_Functional</fullName>
    <active>true</active>
    <description>Case used for automatically run functional tests</description>
    <label>Automated Functional</label>
</RecordType>