force-app/main/default/objects/Test_Case__c/recordTypes/Automated_Performance.recordType-meta.xml
<RecordType>
    <fullName>Automated_Performance</fullName>
    <active>true</active>
    <description>Case used for automatically run performance tests</description>
    <label>Automated Performance</label>
</RecordType>