force-app/main/default/objects/Test_Case__c/recordTypes/Functional.recordType-meta.xml
<RecordType>
    <fullName>Functional</fullName>
    <active>true</active>
    <description>Case used to test a product&apos;s functionality</description>
    <label>Functional</label>
</RecordType>