force-app/main/default/objects/Test_Case__c/recordTypes/Performance.recordType-meta.xml
<RecordType>
    <fullName>Performance</fullName>
    <active>true</active>
    <description>Case used to test a product&apos;s performance</description>
    <label>Performance</label>
</RecordType>