force-app/main/default/objects/Test_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Objective__c</columns>
    <columns>Last_Run_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>