force-app/main/default/objects/Test_Case__c/listViews/All_Apex.listView-meta.xml
<ListView>
    <fullName>All_Apex</fullName>
    <columns>NAME</columns>
    <columns>Test_Objective__c</columns>
    <columns>Last_Run_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family_PL__c</field>
        <operation>greaterThan</operation>
        <value>Apex</value>
    </filters>
    <label>All - Apex</label>
    <language>en_US</language>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>