force-app/main/default/objects/Test_Case__c/listViews/Apex_Priority_3.listView-meta.xml
<ListView>
    <fullName>Apex_Priority_3</fullName>
    <columns>NAME</columns>
    <columns>Function_PL__c</columns>
    <columns>Subfunction_PL__c</columns>
    <columns>Test_Objective__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family_PL__c</field>
        <operation>contains</operation>
        <value>Apex</value>
    </filters>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>3 - Certification Test</value>
    </filters>
    <label>Apex - Priority 3</label>
    <language>en_US</language>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>