force-app/main/default/objects/Test_Case__c/listViews/Apex_Priority_4.listView-meta.xml
<ListView>
    <fullName>Apex_Priority_4</fullName>
    <columns>NAME</columns>
    <columns>Product_Area_PL__c</columns>
    <columns>Function_PL__c</columns>
    <columns>Subfunction_PL__c</columns>
    <columns>Test_Objective__c</columns>
    <columns>Priority__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family_PL__c</field>
        <operation>contains</operation>
        <value>Apex</value>
    </filters>
    <filters>
        <field>Enabled__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Subfunction_PL__c</field>
        <operation>equals</operation>
        <value>Create Routes</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Test_Case__c.Functional</value>
    </filters>
    <label>Create Routes</label>
    <language>en_US</language>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>