force-app/main/default/objects/Test_Case__c/listViews/Functional_Non_Framework.listView-meta.xml
<ListView>
    <fullName>Functional_Non_Framework</fullName>
    <columns>NAME</columns>
    <columns>Function_PL__c</columns>
    <columns>Subfunction_PL__c</columns>
    <columns>Test_Objective__c</columns>
    <columns>Product_Area_PL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family_PL__c</field>
        <operation>contains</operation>
        <value>Apex</value>
    </filters>
    <filters>
        <field>Function_PL__c</field>
        <operation>notEqual</operation>
        <value>Framework</value>
    </filters>
    <label>Functional - Non Framework</label>
    <language>en_US</language>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>