force-app/main/default/objects/Test_Case__c/listViews/Pass_Templates.listView-meta.xml
<ListView>
    <fullName>Pass_Templates</fullName>
    <columns>NAME</columns>
    <columns>Product_Area_PL__c</columns>
    <columns>Function_PL__c</columns>
    <columns>Subfunction_PL__c</columns>
    <columns>Test_Objective__c</columns>
    <columns>Priority__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family_PL__c</field>
        <operation>contains</operation>
        <value>Apex</value>
    </filters>
    <filters>
        <field>Enabled__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Function_PL__c</field>
        <operation>equals</operation>
        <value>Routing</value>
    </filters>
    <filters>
        <field>Subfunction_PL__c</field>
        <operation>equals</operation>
        <value>Pass Templates</value>
    </filters>
    <label>Pass Templates</label>
    <language>en_US</language>
    <sharedTo>
        <group>Roadnet_Users</group>
    </sharedTo>
</ListView>